# modbus-client

./: Cargo.toml  LICENSE  README.md
src/: main.rs  modbus.rs
src/modbus/: modbus_client.rs  share_data.rs
src/ui/: app_ui.rs
