[package]
name = "modbus-client"
version = "0.1.0"
edition = "2024"
authors = ["WenJun"]

[dependencies]
anyhow = "1.0.103"
arc-swap = "1.9.2"
clap = { version = "4.6.1", features = ["derive"] }
eframe = "0.35.0"
egui_extras = "0.35.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-modbus = "0.17.0"
tokio-serial = "5.5.0"
